[package]
name = "cancelbot"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]

[dependencies]
futures = "0.1"
getopts = "0.2"
tokio-core = "0.1"
tokio-curl = "0.1"
curl = "0.3"
rustc-serialize = "0.3"
error-chain = "0.5"
time = "0.1"

[replace]
'tokio-core:0.1.0' = { git = "https://github.com/tokio-rs/tokio-core" }
'tokio-curl:0.1.3' = { git = "https://github.com/tokio-rs/tokio-curl" }
